--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: "Inter";
 }
 
 .hero {
@@ -17,6 +17,10 @@
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url(images/hero.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+h1 {
+  font-family: "Inter";
 }
 
 @media screen and (max-width: 900px) {
@@ -39,7 +43,11 @@ footer {
   background: rgb(223, 220, 209);
   border-style: none;
   position: relative;
-  display: inline-block;
+  display: flex;
+  justify-content: flex-end;
+}
+.burger .close {
+  display: none;
 }
 .burger input[type=checkbox] {
   display: none;
@@ -51,11 +59,16 @@ footer {
 .burger label img {
   width: 3rem;
 }
+.burger input[type=checkbox]:checked + .burger-label .open {
+  display: none;
+}
+.burger input[type=checkbox]:checked + .burger-label .close {
+  display: block;
+}
 .burger .burger-content {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  left: 3rem;
   list-style: none;
   padding: 2rem;
   border-radius: 0.5rem;
@@ -66,23 +79,50 @@ footer {
 .burger .burger-content li a {
   display: block;
   margin-bottom: 1rem;
+  text-decoration: none;
 }
 .burger .burger-content li a:last-child {
   margin-bottom: 0;
 }
 .burger input[type=checkbox]:checked ~ .burger-content {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  left: 2rem;
+  right: 2rem;
+  top: 3rem;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
+}
+.burger input[type=checkbox]:checked ~ .burger-content li {
+  justify-content: center;
+  align-items: center;
+}
+.burger input[type=checkbox]:checked ~ .burger-content li a {
+  color: black;
+  border-bottom-style: solid;
+  border-width: 0.1rem;
 }
 
 @media screen and (min-width: 900px) {
+  .burger {
+    position: sticky !important;
+    top: 0px !important;
+  }
   .burger-content {
     align-items: center;
     display: flex !important;
-    position: static !important;
-    padding: 0 !important;
+    padding: 1rem !important;
     border-radius: 0 !important;
     box-shadow: none !important;
     left: 0 !important;
+    width: 100vw;
+    justify-content: center;
+    background-color: #ebe4de !important;
+  }
+  .burger-content ul {
+    margin: 0;
+    padding: 0;
   }
   .burger-content li {
     display: inline;
@@ -91,15 +131,13 @@ footer {
   .burger-content li a {
     display: inline !important;
     margin-bottom: 0 !important;
-    padding: 0 !important;
-    background: none !important;
+    padding: 0.5rem !important;
+    border-width: 0.15rem;
     color: inherit !important;
+    margin: 1rem;
   }
-  .burger {
-    display: inline-block;
-  }
-  .burger input[type=checkbox],
-  .burger label {
-    display: none;
+  .burger-content li a:hover {
+    border-bottom-style: solid !important;
+    border-color: #000000 !important;
   }
 }/*# sourceMappingURL=styles.css.map */
