--- a/styles.scss
+++ b/styles.scss
@@ -2,10 +2,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: "Inter";
 }
+
 .hero {
-  
   width: 100vw;
   height: 50vh;
   display: flex;
@@ -19,6 +19,9 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
+h1 {
+  font-family: "Inter";
+}
 @media screen and (max-width: 900px) {
   .hero {
     font-size: 3rem;
@@ -26,11 +29,9 @@
 }
 body {
   background-color: rgb(223, 220, 209);
-  
 }
 
 footer {
-  
   text-align: center;
   padding: 1rem;
   background-color: rgb(188, 185, 182);
@@ -40,8 +41,11 @@ footer {
   background: rgb(223, 220, 209);
   border-style: none;
   position: relative;
-  display: inline-block;
-
+  display: flex;
+  justify-content: flex-end;
+  .close {
+    display: none;
+  }
   input[type="checkbox"] {
     display: none;
   }
@@ -54,62 +58,97 @@ footer {
       width: 3rem;
     }
   }
+  input[type="checkbox"]:checked + .burger-label .open {
+    display: none;
+  }
+
+  input[type="checkbox"]:checked + .burger-label .close {
+    display: block;
+  }
 
   .burger-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    left: 3rem;
     list-style: none;
     padding: 2rem;
     border-radius: 0.5rem;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
     font-size: 1.5rem;
-    li{
-      a{
+
+    li {
+      a {
         display: block;
         margin-bottom: 1rem;
+        text-decoration: none;
         &:last-child {
-          margin-bottom: 0; 
+          margin-bottom: 0;
         }
       }
     }
-
   }
 
   input[type="checkbox"]:checked ~ .burger-content {
-    display: block;
-  }
-}
-@media screen and (min-width: 900px) {
-  .burger-content {
-    align-items: center;
-    display: flex !important;
-    position: static !important;
-    padding: 0 !important;
-    border-radius: 0 !important;
-    box-shadow: none !important;
-    left: 0 !important;
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+    left: 2rem;
+    right: 2rem;
+    top: 3rem;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
     li {
-      display: inline; 
-      margin: 0 !important; 
+      justify-content: center;
+      align-items: center;
 
       a {
-        display: inline !important; 
-        margin-bottom: 0 !important; 
-        padding: 0 !important; 
-        background: none !important;
-        color: inherit !important;
+        color: black;
+        border-bottom-style: solid;
+        border-width: 0.1rem;
       }
     }
   }
-  .burger {
-    display: inline-block ;
-    input[type="checkbox"], 
-    label {
-      display: none;
+}
+@media screen and (min-width: 900px) {
+  .burger{
+    position: sticky !important;
+    top: 0px !important;
+  }
+  .burger-content {
+    align-items: center;
+    display: flex !important;
+    padding: 1rem !important;
+    border-radius: 0 !important;
+    box-shadow: none !important;
+    left: 0 !important;
+    width: 100vw;
+    justify-content: center;
+    background-color: #ebe4de !important;
+    
+
+    ul {
+      margin: 0;
+      padding: 0;  
+    }
+
+    li {
+      display: inline;
+      margin: 0 !important;
+
+      a {
+        display: inline !important;
+        margin-bottom: 0 !important;
+        padding: 0.5rem !important;
+        border-width: 0.15rem;
+        color: inherit !important;
+        margin: 1rem;
+
+        &:hover {
+          border-bottom-style: solid !important ;
+          border-color: #000000 !important;
+        }
+      }
     }
   }
 }
