mobile latest articles section

--- a/styles.css
+++ b/styles.css
@@ -29,10 +29,11 @@ h1 {
   }
 }
 body {
-  background-color: rgb(223, 220, 209);
+  background-color: rgb(233, 224, 224);
 }
 
 footer {
+  margin-top: 3rem;
   text-align: center;
   padding: 1rem;
   background-color: rgb(188, 185, 182);
@@ -40,7 +41,7 @@ footer {
 }
 
 .burger {
-  background: rgb(223, 220, 209);
+  background: rgb(236, 235, 231);
   border-style: none;
   position: relative;
   display: flex;
@@ -58,6 +59,7 @@ footer {
 }
 .burger label img {
   width: 3rem;
+  margin-right: 2vw;
 }
 .burger input[type=checkbox]:checked + .burger-label .open {
   display: none;
@@ -68,7 +70,7 @@ footer {
 .burger .burger-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: rgb(236, 235, 231);
   list-style: none;
   padding: 2rem;
   border-radius: 0.5rem;
@@ -118,7 +120,6 @@ footer {
     left: 0 !important;
     width: 100vw;
     justify-content: center;
-    background-color: #ebe4de !important;
   }
   .burger-content ul {
     margin: 0;
@@ -140,4 +141,50 @@ footer {
     border-bottom-style: solid !important;
     border-color: #000000 !important;
   }
+}
+.articles {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1rem;
+}
+.articles .article-title {
+  font-weight: 650;
+  font-size: 1.5rem;
+}
+.articles .article-desc {
+  color: #3a3a3a;
+}
+.articles a {
+  text-decoration: none;
+  color: black;
+}
+.articles .top {
+  width: 100%;
+  align-self: center;
+  margin-bottom: 1rem;
+}
+.articles .top p {
+  margin-left: 1rem;
+}
+.articles .top img {
+  width: 100%;
+  display: block;
+}
+.articles .bottom-container {
+  display: flex;
+  width: 95%;
+  justify-content: center;
+  align-self: center;
+  padding-bottom: 2rem;
+  border-bottom-style: solid;
+  border-width: 0.1rem;
+  border-color: #a1a1a1;
+}
+.articles .bottom-container .bottom {
+  flex: 1;
+  margin: 0.4rem;
+}
+.articles .bottom-container .bottom img {
+  width: 100%;
+  display: block;
 }/*# sourceMappingURL=styles.css.map */
