--- a/styles.scss
+++ b/styles.scss
@@ -30,7 +30,7 @@ h1 {
   }
 }
 body {
-  background-color: rgb(233, 224, 224);
+  background-color: rgb(238, 234, 234);
 }
 
 footer {
@@ -158,6 +158,7 @@ footer {
   display: flex;
   flex-direction: column;
   margin-top: 1rem;
+  
 
   .article-title {
     font-weight: 650;
@@ -194,6 +195,7 @@ footer {
     border-bottom-style: solid;
     border-width: 0.1rem;
     border-color: #a1a1a1;
+   
 
     .bottom {
       flex: 1;
@@ -202,6 +204,45 @@ footer {
       img {
         width: 100%;
         display: block;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .articles {
+    
+    flex-direction: row !important;
+    max-width: 1200px;
+    margin: 0 auto!important;
+    gap: 1rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    border-bottom-style: solid;
+    border-width: 0.1rem;
+    border-color: #a1a1a1;
+    
+   .top{
+    align-self: flex-start;
+    .article-title {
+      font-weight: 650;
+      font-size: 2.5rem;
+      margin-left: 0;
+    }
+    p {
+      margin-left: 0rem;
+      font-size: 1.1rem;
+    }
+    
+   
+   }
+    .bottom-container {
+      flex-direction: column !important;
+      width: 40%;
+      border-style: none;
+      .bottom{
+        margin: 0 auto !important;
+        padding-bottom: 1rem;
       }
     }
   }
