--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 .hero {
-  width: 100vw;
+  width: 100%;
   height: 50vh;
   display: flex;
   font-size: 5rem;
@@ -41,6 +41,7 @@ footer {
 }
 
 .burger {
+  height: 3rem;
   background: rgb(236, 235, 231);
   border-style: none;
   position: relative;
@@ -49,6 +50,9 @@ footer {
 }
 .burger .close {
   display: none;
+  width: 2rem;
+  margin-top: 0.5rem;
+  margin-right: 4vw;
 }
 .burger input[type=checkbox] {
   display: none;
@@ -118,7 +122,7 @@ footer {
     border-radius: 0 !important;
     box-shadow: none !important;
     left: 0 !important;
-    width: 100vw;
+    width: 100%;
     justify-content: center;
   }
   .burger-content ul {
@@ -192,6 +196,7 @@ footer {
 @media screen and (min-width: 900px) {
   .articles {
     flex-direction: row !important;
+    width: 80vw;
     max-width: 1200px;
     margin: 0 auto !important;
     gap: 1rem;
@@ -222,4 +227,69 @@ footer {
     margin: 0 auto !important;
     padding-bottom: 1rem;
   }
+}
+.image-heading-skaventide {
+  width: 100%;
+  height: 20rem;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  background-position: center;
+  color: white;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgb(0, 0, 0)), url(images/article1.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+.image-heading-skaventide p {
+  margin-bottom: 2rem;
+  font-size: 1.7rem;
+  text-align: center;
+  font-weight: 750;
+}
+
+.image-heading-bt {
+  width: 100%;
+  height: 20rem;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  background-position: center;
+  color: white;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgb(0, 0, 0)), url(images/article2.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+.image-heading-bt p {
+  margin-bottom: 2rem;
+  font-size: 1.7rem;
+  text-align: center;
+  font-weight: 750;
+}
+
+.image-heading-tyr {
+  width: 100%;
+  height: 20rem;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  background-position: center;
+  color: white;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgb(0, 0, 0)), url(images/article3.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+.image-heading-tyr p {
+  margin-bottom: 2rem;
+  font-size: 1.7rem;
+  text-align: center;
+  font-weight: 750;
+}
+
+.test {
+  margin-top: 2rem;
+  width: 90%;
+  margin-left: 1rem;
 }/*# sourceMappingURL=styles.css.map */
