--- a/styles.scss
+++ b/styles.scss
@@ -1,4 +1,5 @@
 $header-color: rgb(236, 235, 231);
+$background-color: rgb(240, 243, 243);
 
 * {
   margin: 0;
@@ -9,7 +10,7 @@ $header-color: rgb(236, 235, 231);
 
 .hero {
   width: 100%;
-  height: 50vh;
+  height: 40vh;
   display: flex;
   font-size: 5rem;
   justify-content: center;
@@ -30,11 +31,10 @@ h1 {
   }
 }
 body {
-  background-color: rgb(238, 234, 234);
+  background-color: $background-color
 }
 
 footer {
-  margin-top: 3rem;
   text-align: center;
   padding: 1rem;
   background-color: rgb(188, 185, 182);
@@ -86,12 +86,15 @@ footer {
     font-size: 1.5rem;
 
     li {
+      list-style-type: none;
       a {
         display: block;
         margin-bottom: 1rem;
         text-decoration: none;
+        text-align: center;
         &:last-child {
           margin-bottom: 0;
+          
         }
       }
     }
@@ -113,15 +116,23 @@ footer {
       a {
         color: black;
         border-bottom-style: solid;
-        border-width: 0.1rem;
+        border-width: 0.05rem;
+       
+        
       }
     }
   }
 }
 @media screen and (min-width: 900px) {
+  .hero{
+    margin-top: 3rem;
+    height: 50vh;
+  }
   .burger {
-    position: sticky !important;
+    position: fixed !important;
+    width: 100%;
     top: 0px !important;
+   
   }
   .burger-content {
     align-items: center;
@@ -248,7 +259,7 @@ footer {
   }
 }
 
-.image-heading-skaventide {
+.image-heading{
   width: 100%;
   height: 20rem;
   display: flex;
@@ -256,11 +267,10 @@ footer {
   align-items: end;
   background-position: center;
   color: white;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 1)),
-    url(images/article1.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+ 
   p{
     margin-bottom: 2rem;
     font-size: 1.7rem;
@@ -269,52 +279,80 @@ footer {
     
   }
 }
-.image-heading-bt {
-  width: 100%;
-  height: 20rem;
-  display: flex;
-  justify-content: center;
-  align-items: end;
-  background-position: center;
-  color: white;
+.skaventide{
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 1)),
-    url(images/article2.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  p{
-    margin-bottom: 2rem;
-    font-size: 1.7rem;
-    text-align: center;
-    font-weight: 750;
-    
-  }
-  
+  url(images/article1.jpg);
 }
-.image-heading-tyr {
-  width: 100%;
-  height: 20rem;
-  display: flex;
-  justify-content: center;
-  align-items: end;
-  background-position: center;
-  color: white;
+.bt{
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 1)),
-    url(images/article3.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  p{
-    margin-bottom: 2rem;
-    font-size: 1.7rem;
-    text-align: center;
-    font-weight: 750;
-    
-  }
-  
+  url(images/article2.jpg);
+}
+.tyr{
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 1)),
+  url(images/article3.jpg);
 }
 .test{
   margin-top: 2rem;
-  width: 90%;
+  width: 10%;
   margin-left: 1rem;
+
+}
+
+.h2-home{
+  h2{
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.gallery-wrapper{
+  margin: 0 auto;
+  margin-top: 2rem;
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  .contact{
+    display: none;
+  }
+  
+  .gallery-item{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 2rem;
+    padding-bottom: 1rem;
+    background-color: rgb(255, 255, 255);
+    border-radius: 0.5rem;
+    box-shadow: 0px 1px 1px rgb(187, 187, 187);
+    img{
+      border-top-left-radius: 0.5rem;
+      border-top-right-radius: 0.5rem;
+      margin-bottom: 1rem;
+    }
+    
+  }
+ 
+}
+@media screen and (min-width: 900px) {
+  .contact{
+    display: flex !important;
+    flex-direction: column;
+    margin-left: 3rem;
+    background-color: rgb(255, 255, 255);
+    margin-bottom: auto;
+    padding: 2rem;
+    position: sticky !important;
+    top: 5rem;
+  }
+  .gallery-wrapper{
+    max-width: 900px;
+    display: flex;
+    flex-direction: row;
+    .gallery-item{
+      border-radius: 0 ;
+      img{
+        border-radius: 0;
+      }
+    }
+  }
+  
 }
