--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 .hero {
   width: 100%;
-  height: 40vh;
+  height: 16rem;
   display: flex;
   font-size: 5rem;
   justify-content: center;
@@ -16,6 +16,7 @@
   color: white;
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url(images/hero.jpg);
   background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
 }
 
@@ -26,6 +27,16 @@ h1 {
 @media screen and (max-width: 900px) {
   .hero {
     font-size: 3rem;
+  }
+}
+@media screen and (max-width: 350px) {
+  .hero {
+    font-size: 2.5rem;
+  }
+}
+@media screen and (max-width: 270px) {
+  .hero {
+    font-size: 2rem;
   }
 }
 body {
@@ -172,7 +183,7 @@ footer {
   color: black;
 }
 .articles .top {
-  width: 100%;
+  width: 97%;
   align-self: center;
   margin-bottom: 1rem;
 }
@@ -212,8 +223,8 @@ footer {
     padding-top: 2rem;
     padding-bottom: 2rem;
     border-bottom-style: solid;
-    border-width: 0.1rem;
-    border-color: #a1a1a1;
+    border-width: 0.2rem;
+    border-color: rgb(219, 219, 219);
   }
   .articles .top {
     align-self: flex-start;
@@ -295,16 +306,13 @@ footer {
   margin-bottom: 2rem;
   padding-bottom: 1rem;
   background-color: rgb(255, 255, 255);
-  border-radius: 0.5rem;
-  box-shadow: 0px 1px 1px rgb(187, 187, 187);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
 }
 .gallery-wrapper .gallery-item p {
   font-size: 1.2rem;
   margin-left: 1rem;
 }
 .gallery-wrapper .gallery-item img {
-  border-top-left-radius: 0.5rem;
-  border-top-right-radius: 0.5rem;
   margin-bottom: 1rem;
 }
 
@@ -352,9 +360,9 @@ footer {
     display: flex !important;
     flex-direction: column;
     margin-left: 3rem;
-    background-color: rgb(255, 255, 255);
     margin-bottom: auto;
-    padding: 2rem;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
     position: sticky !important;
     top: 5rem;
   }
@@ -366,7 +374,11 @@ footer {
     margin-bottom: 0.5rem;
   }
   .contact p, .page-contact p {
+    border-top-style: solid;
+    border-width: 0.2rem;
+    border-color: rgb(219, 219, 219);
     margin-bottom: 0.5rem;
+    padding-top: 0.5rem;
   }
   .contact .button, .page-contact .button {
     width: 75%;
@@ -374,19 +386,20 @@ footer {
     padding-top: 1rem;
     padding-bottom: 1rem;
     border: none;
-    background-color: rgb(240, 243, 243);
+    background-color: white;
     border-style: solid;
     border-width: 0.07rem;
-    border-color: white;
+    border-color: rgb(0, 0, 0);
     text-align: center;
     font-weight: 500;
   }
   .contact .button:hover, .page-contact .button:hover {
-    border-color: black;
+    background-color: rgb(240, 243, 243);
     cursor: pointer;
   }
   .page-contact {
     margin: auto;
+    padding-top: 1rem;
     margin-top: 2rem;
   }
   .gallery-wrapper {
