--- a/styles.scss
+++ b/styles.scss
@@ -10,7 +10,7 @@ $background-color: rgb(240, 243, 243);
 
 .hero {
   width: 100%;
-  height: 40vh;
+  height: 16rem;
   display: flex;
   font-size: 5rem;
   justify-content: center;
@@ -20,6 +20,7 @@ $background-color: rgb(240, 243, 243);
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)),
     url(images/hero.jpg);
   background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
 }
 h1 {
@@ -28,6 +29,17 @@ h1 {
 @media screen and (max-width: 900px) {
   .hero {
     font-size: 3rem;
+  }
+  
+}
+@media screen and (max-width: 350px) {
+  .hero {
+    font-size: 2.5rem;
+  }
+}
+@media screen and (max-width: 270px) {
+  .hero {
+    font-size: 2rem;
   }
 }
 body {
@@ -184,7 +196,7 @@ footer {
   }
 
   .top {
-    width: 100%;
+    width: 97%;
     align-self: center;
     margin-bottom: 1rem;
     p {
@@ -229,8 +241,8 @@ footer {
     padding-top: 2rem;
     padding-bottom: 2rem;
     border-bottom-style: solid;
-    border-width: 0.1rem;
-    border-color: #a1a1a1;
+    border-width: 0.2rem;
+    border-color: rgb(219, 219, 219);
 
     .top {
       align-self: flex-start;
@@ -323,15 +335,12 @@ footer {
     margin-bottom: 2rem;
     padding-bottom: 1rem;
     background-color: rgb(255, 255, 255);
-    border-radius: 0.5rem;
-    box-shadow: 0px 1px 1px rgb(187, 187, 187);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
     p{
       font-size: 1.2rem;
       margin-left: 1rem;
     }
     img {
-      border-top-left-radius: 0.5rem;
-      border-top-right-radius: 0.5rem;
       margin-bottom: 1rem;
     }
   }
@@ -388,11 +397,13 @@ footer {
     display: flex !important;
     flex-direction: column;
     margin-left: 3rem;
-    background-color: rgb(255, 255, 255);
     margin-bottom: auto;
-    padding: 2rem;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
     position: sticky !important;
     top: 5rem;
+    
+   
     form{
       max-width: 150px;
       font-weight: 600;
@@ -404,7 +415,11 @@ footer {
     
     
    p{
+    border-top-style: solid;
+    border-width: 0.2rem;
+    border-color: rgb(219, 219, 219);
     margin-bottom: 0.5rem;
+    padding-top: 0.5rem;
     
    }
 
@@ -414,21 +429,23 @@ footer {
       padding-top: 1rem;
       padding-bottom: 1rem;
       border: none;
-      background-color: $background-color;
+      background-color: white;
       border-style: solid;
       border-width: 0.07rem;
-      border-color: white;
+      border-color: rgb(0, 0, 0);
       text-align: center;
       font-weight: 500;
       &:hover{
-        border-color: black;
+        background-color: $background-color;
         cursor: pointer;
       }
     }
   }
   .page-contact{
     margin: auto;
+    padding-top: 1rem;
     margin-top: 2rem;
+   
   }
   .gallery-wrapper {
     max-width: 1200px;
