--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,6 @@ body {
 }
 
 footer {
-  margin-top: 2rem;
   text-align: center;
   padding: 1rem;
   background-color: rgb(188, 185, 182);
@@ -250,7 +249,7 @@ footer {
 }
 .image-heading {
   width: 100%;
-  height: 25rem;
+  height: 35rem;
   display: flex;
   justify-content: center;
   align-items: end;
@@ -260,6 +259,11 @@ footer {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
+}
+@media screen and (max-width: 768px) {
+  .image-heading {
+    height: 20rem;
+  }
 }
 .image-heading p {
   margin-bottom: 2rem;
@@ -316,91 +320,91 @@ footer {
   margin-bottom: 1rem;
 }
 
+.contact {
+  display: none !important;
+}
+
 .page-contact {
-  width: 85%;
+  margin: 0 auto !important;
+}
+@media screen and (min-width: 900px) {
+  .page-contact {
+    margin-bottom: 2rem !important;
+    margin-top: 2rem !important;
+  }
+}
+
+.page-contact,
+.contact {
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   background-color: white;
-  margin: auto;
-  margin-top: 2rem;
-  padding: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 0.5rem;
+  max-width: 400px;
+  margin-left: 3rem;
+  margin-bottom: auto;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
-.page-contact p {
-  font-weight: 500;
-}
-.page-contact form {
-  max-width: 150px;
+.page-contact form,
+.contact form {
+  width: 100%;
   font-weight: 600;
 }
-.page-contact form input {
+.page-contact form .string-input,
+.contact form .string-input {
+  width: 100%;
+  margin-right: 1rem;
+}
+.page-contact form textarea,
+.contact form textarea {
+  resize: none;
+  width: 100%;
+  margin-right: 1rem;
+  height: 4rem;
+}
+.page-contact form input,
+.contact form input {
   margin-bottom: 0.5rem;
 }
-.page-contact p {
-  margin-bottom: 0.5rem;
-}
-.page-contact .button {
-  width: 75%;
+.page-contact .button,
+.contact .button {
+  width: 100%;
   margin-top: 0.5rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
   border: none;
-  border-style: solid;
   background-color: white;
+  border-style: solid;
   border-width: 0.07rem;
-  border-color: black;
+  border-color: rgb(0, 0, 0);
   text-align: center;
-  font-weight: 500;
+  font-weight: 550;
+  font-size: 1.2rem;
 }
-
-.home {
-  display: none !important;
+.page-contact .button:hover,
+.contact .button:hover {
+  background-color: rgb(240, 243, 243);
+  cursor: pointer;
+}
+.page-contact p,
+.contact p {
+  border-top-style: solid;
+  border-width: 0.2rem;
+  border-color: rgb(219, 219, 219);
+  margin-bottom: 0.5rem;
+  padding-top: 0.5rem;
 }
 
 @media screen and (min-width: 900px) {
-  .contact, .page-contact {
-    max-width: 400px;
-    display: flex !important;
-    flex-direction: column;
-    margin-left: 3rem;
-    margin-bottom: auto;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
+  .contact {
     position: sticky !important;
     top: 5rem;
   }
-  .contact form, .page-contact form {
-    max-width: 150px;
-    font-weight: 600;
-  }
-  .contact form input, .page-contact form input {
-    margin-bottom: 0.5rem;
-  }
-  .contact p, .page-contact p {
-    border-top-style: solid;
-    border-width: 0.2rem;
-    border-color: rgb(219, 219, 219);
-    margin-bottom: 0.5rem;
-    padding-top: 0.5rem;
-  }
-  .contact .button, .page-contact .button {
-    width: 75%;
-    margin-top: 0.5rem;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    border: none;
-    background-color: white;
-    border-style: solid;
-    border-width: 0.07rem;
-    border-color: rgb(0, 0, 0);
-    text-align: center;
-    font-weight: 500;
-  }
-  .contact .button:hover, .page-contact .button:hover {
-    background-color: rgb(240, 243, 243);
-    cursor: pointer;
-  }
+  .contact,
   .page-contact {
-    margin: auto;
-    padding-top: 1rem;
-    margin-top: 2rem;
+    display: flex !important;
+    flex-direction: column;
   }
   .gallery-wrapper {
     max-width: 1200px;
