--- a/styles.scss
+++ b/styles.scss
@@ -30,7 +30,6 @@ h1 {
   .hero {
     font-size: 3rem;
   }
-  
 }
 @media screen and (max-width: 350px) {
   .hero {
@@ -47,7 +46,6 @@ body {
 }
 
 footer {
-  margin-top: 2rem;
   text-align: center;
   padding: 1rem;
   background-color: rgb(188, 185, 182);
@@ -270,7 +268,7 @@ footer {
 
 .image-heading {
   width: 100%;
-  height: 25rem;
+  height: 35rem;
   display: flex;
   justify-content: center;
   align-items: end;
@@ -280,16 +278,16 @@ footer {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
+  @media screen and (max-width: 768px){
+    height: 20rem;
+  }
   p {
     margin-bottom: 2rem;
     font-size: 1.7rem;
     text-align: center;
     font-weight: 750;
   }
-  
 }
-
-
 
 .skaventide {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 1)),
@@ -324,11 +322,6 @@ footer {
   display: flex;
   flex-direction: column;
 
-
-
-
-
-
   .gallery-item {
     display: flex;
     flex-direction: column;
@@ -336,7 +329,7 @@ footer {
     padding-bottom: 1rem;
     background-color: rgb(255, 255, 255);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
-    p{
+    p {
       font-size: 1.2rem;
       margin-left: 1rem;
     }
@@ -346,107 +339,89 @@ footer {
   }
 }
 
+.contact {
+  display: none !important;
+}
 .page-contact {
-  width: 85%;
-  background-color: white;
-  margin: auto;
-  margin-top: 2rem;
-  padding: 1rem;
-  
-  p{
-    font-weight: 500;
+  margin: 0 auto !important;
+
+  @media screen and (min-width: 900px) {
+    margin-bottom: 2rem !important;
+    margin-top: 2rem !important;
   }
-  form{
-    
-    max-width: 150px;
+}
+.page-contact,
+.contact {
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  background-color: white;
+  padding-top: 1rem;
+  padding-bottom: 0.5rem;
+  max-width: 400px;
+  margin-left: 3rem;
+  margin-bottom: auto;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+  form {
+    width: 100%;
     font-weight: 600;
-    input{
+    .string-input {
+      width: 100%;
+
+      margin-right: 1rem;
+    }
+
+    textarea {
+      resize: none;
+      width: 100%;
+
+      margin-right: 1rem;
+      height: 4rem;
+    }
+
+    input {
       margin-bottom: 0.5rem;
-     
     }
   }
-  
-  
- p{
-  margin-bottom: 0.5rem;
-  
- }
 
-  .button{
-    width: 75%;
+  .button {
+    width: 100%;
     margin-top: 0.5rem;
     padding-top: 1rem;
     padding-bottom: 1rem;
     border: none;
-    border-style: solid;
     background-color: white;
+    border-style: solid;
     border-width: 0.07rem;
-    border-color: black;
+    border-color: rgb(0, 0, 0);
     text-align: center;
-    font-weight: 500;
-    
-  }
-}
-.home {
-  display: none !important;
-}
-@media screen and (min-width: 900px) {
-
-  .contact, .page-contact{
-    max-width: 400px;
-    display: flex !important;
-    flex-direction: column;
-    margin-left: 3rem;
-    margin-bottom: auto;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-    position: sticky !important;
-    top: 5rem;
-    
-   
-    form{
-      max-width: 150px;
-      font-weight: 600;
-      input{
-        
-        margin-bottom: 0.5rem;
-      }
+    font-weight: 550;
+    font-size: 1.2rem;
+    &:hover {
+      background-color: $background-color;
+      cursor: pointer;
     }
-    
-    
-   p{
+  }
+  p {
     border-top-style: solid;
     border-width: 0.2rem;
     border-color: rgb(219, 219, 219);
     margin-bottom: 0.5rem;
     padding-top: 0.5rem;
-    
-   }
+  }
+}
 
-    .button{
-      width: 75%;
-      margin-top: 0.5rem;
-      padding-top: 1rem;
-      padding-bottom: 1rem;
-      border: none;
-      background-color: white;
-      border-style: solid;
-      border-width: 0.07rem;
-      border-color: rgb(0, 0, 0);
-      text-align: center;
-      font-weight: 500;
-      &:hover{
-        background-color: $background-color;
-        cursor: pointer;
-      }
-    }
+@media screen and (min-width: 900px) {
+  .contact {
+    position: sticky !important;
+    top: 5rem;
   }
-  .page-contact{
-    margin: auto;
-    padding-top: 1rem;
-    margin-top: 2rem;
-   
+
+  .contact,
+  .page-contact {
+    display: flex !important;
+    flex-direction: column;
   }
+
   .gallery-wrapper {
     max-width: 1200px;
     display: flex;
