--- a/styles.css
+++ b/styles.css
@@ -247,6 +247,55 @@ footer {
     padding-bottom: 1rem;
   }
 }
+.article-wrapper {
+  background-color: rgb(240, 243, 243);
+  width: 100%;
+}
+.article-wrapper h2 {
+  font-size: 1.5rem;
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 1rem;
+  font-weight: 550;
+}
+.article-wrapper .article-intro {
+  font-size: 1.3rem;
+  font-weight: 500;
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border-bottom-style: solid;
+  border-top-style: solid;
+  border-width: 0.2rem;
+  border-color: rgb(219, 219, 219);
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+}
+.article-wrapper .part-heading {
+  font-size: 2rem;
+  font-weight: 650;
+  margin-left: 1.5rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+.article-wrapper .guide-step {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
+.article-wrapper .guide-step img {
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
+}
+.article-wrapper .guide-step p {
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 1rem;
+}
+
 .image-heading {
   width: 100%;
   height: 35rem;
@@ -260,12 +309,7 @@ footer {
   background-attachment: fixed;
   background-position: center;
 }
-@media screen and (max-width: 768px) {
-  .image-heading {
-    height: 20rem;
-  }
-}
-.image-heading p {
+.image-heading h1 {
   margin-bottom: 2rem;
   font-size: 1.7rem;
   text-align: center;
@@ -282,12 +326,6 @@ footer {
 
 .tyr {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgb(0, 0, 0)), url(images/article3.jpg);
-}
-
-.test {
-  margin-top: 2rem;
-  width: 10%;
-  margin-left: 1rem;
 }
 
 .h2-home h2 {
