--- a/styles.scss
+++ b/styles.scss
@@ -265,7 +265,57 @@ footer {
     }
   }
 }
+.article-wrapper{
+  background-color: $background-color;
+  width: 100%;
+  h2{
+    font-size: 1.5rem;
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 1rem;
+    font-weight: 550;
+  }
+  .article-intro{
+    font-size: 1.3rem;
+    font-weight: 500;
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border-bottom-style: solid;
+    border-top-style: solid;
+    border-width: 0.2rem;
+    border-color: rgb(219, 219, 219);
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+  }
 
+  .part-heading{
+    font-size:2rem ;
+    font-weight: 650;
+    margin-left: 1.5rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+ 
+  }
+  .guide-step{
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+    img{
+      border-radius: 0.5rem;
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
+    }
+    p{
+      width: 90%;
+      margin: 0 auto;
+      margin-top: 1rem;
+    }
+  }
+
+}
 .image-heading {
   width: 100%;
   height: 35rem;
@@ -278,10 +328,8 @@ footer {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
-  @media screen and (max-width: 768px){
-    height: 20rem;
-  }
-  p {
+
+  h1 {
     margin-bottom: 2rem;
     font-size: 1.7rem;
     text-align: center;
@@ -300,11 +348,6 @@ footer {
 .tyr {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 1)),
     url(images/article3.jpg);
-}
-.test {
-  margin-top: 2rem;
-  width: 10%;
-  margin-left: 1rem;
 }
 
 .h2-home {
