--- a/styles.scss
+++ b/styles.scss
@@ -268,11 +268,36 @@ footer {
 .article-wrapper{
   background-color: $background-color;
   width: 100%;
+  margin-top: 1rem;
+  @media screen and (min-width: 900px) {
+    width: 60vw;
+    margin: 0 auto;
+    max-width: 1200px;
+    margin-top: 3rem;
+    .article-intro{
+      width: 40rem !important;
+  
+ 
+    }
+
+    h2{
+      text-align: center;
+      margin-bottom: 2rem !important;
+      font-size: 2rem !important;
+    }
+    .article-main{
+      width: 40vw;
+      max-width: 700px;
+      margin: 0 auto;
+      
+    }
+    
+  }
   h2{
     font-size: 1.5rem;
     width: 90%;
     margin: 0 auto;
-    margin-top: 1rem;
+    
     font-weight: 550;
   }
   .article-intro{
@@ -331,7 +356,7 @@ footer {
 
   h1 {
     margin-bottom: 2rem;
-    font-size: 1.7rem;
+    font-size:2.2rem;
     text-align: center;
     font-weight: 750;
   }
