--- a/styles.scss
+++ b/styles.scss
@@ -42,7 +42,9 @@ $background-color: rgb(240, 243, 243);
 body {
   background-color: $background-color;
 }
-
+main {
+  margin-bottom: 2rem;
+}
 footer {
   text-align: center;
   padding: 1rem;
@@ -267,9 +269,11 @@ footer {
   background-color: $background-color;
   width: 100%;
   margin-top: 1rem;
-  
+
   .article-main {
     .grid-container {
+      margin-left: 0.5rem;
+      margin-right: 0.5rem;
       display: grid;
       grid-template-columns: 1fr;
       grid-template-rows: auto auto auto;
@@ -291,7 +295,6 @@ footer {
 
     .item3 {
       grid-area: 3 / 1 / 3 / 1;
-      
     }
     ul {
       margin-left: 3rem;
@@ -303,15 +306,16 @@ footer {
       text-align: center;
       color: #3a3a3a;
       img {
-        width: 100%;
+        width: 95%;
       }
     }
   }
   @media screen and (min-width: 900px) {
-    width: 60vw;
+    width: 100%;
     margin: 0 auto;
     max-width: 1200px;
     margin-top: 3rem;
+
     .article-intro {
       width: 40rem !important;
     }
@@ -323,6 +327,7 @@ footer {
     }
     .article-main {
       .grid-container {
+        margin: 0;
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: auto auto;
@@ -375,40 +380,35 @@ footer {
   .part-heading {
     font-size: 2rem;
     font-weight: 650;
-    margin-left: 1.5rem;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
+    padding-top: 1rem;
   }
 
   .guide-step {
     width: 90%;
+    
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     margin-bottom: 1rem;
     margin-top: 2rem;
+    background-color: rgb(255, 255, 255);
+    border-radius: 0.5rem;
+    padding-bottom: 1rem;
+    img {
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+    }
     &:last-child {
-      border-top-style: solid;
       border-width: 0.2rem;
-      border-color: rgb(219, 219, 219);
-      padding-top: 2rem;
       margin-bottom: 2rem;
+     
     }
 
     @media screen and (min-width: 768px) {
-      &:last-child {
-        flex-direction: column;
-        width: 40rem;
-        p {
-          margin-top: 1rem;
-        }
-        img {
-          width: 100%;
-        }
-      }
-
       flex-direction: row;
       align-items: center;
+      padding-bottom: 0;
+      padding-right: 1rem;
       p {
         margin: 0 auto;
         margin-left: 1rem;
@@ -417,6 +417,9 @@ footer {
       img {
         height: 65%;
         width: 65%;
+        border-radius: 0;
+        border-top-left-radius: 0.5rem;
+        border-bottom-left-radius: 0.5rem;
       }
     }
   }
@@ -443,7 +446,8 @@ footer {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center;
+  background-position: 50% 90%;
+  
 
   h1 {
     margin-bottom: 2rem;
@@ -455,15 +459,15 @@ footer {
 
 .skaventide {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 1)),
-    url(images/article1.jpg);
+    url(images/skavenhero2.jpg);
 }
 .bt {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 1)),
-    url(images/article2.jpg);
+    url(images/black.jpg);
 }
 .tyr {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 1)),
-    url(images/article3.jpg);
+    url(images/tyrbanner.jpg);
 }
 
 .h2-home {
@@ -589,6 +593,7 @@ footer {
       border-radius: 0;
       img {
         border-radius: 0;
+        width: 100%;
       }
     }
   }
