--- a/styles.scss
+++ b/styles.scss
@@ -601,6 +601,10 @@ footer {
   width: 60%;
   margin: auto;
   margin-top: 1rem;
+  h2{
+    border-bottom-style: solid;
+    border-color: $border-color;
+  }
  
   @media screen and (max-width: 900px) {
     width: 95%;
@@ -630,6 +634,7 @@ footer {
   }
   section {
     border-radius: 0.3rem;
+    
     width: 17rem;
     padding-top: 16rem;
     padding-bottom: 2rem;
@@ -656,8 +661,7 @@ h2 {
   margin-top: 1rem;
   text-align: center;
   margin-bottom: 1rem;
-  border-bottom-style: solid;
-  border-color: $border-color;
+  
   padding-bottom: 0.5rem;
   width: 90%;
   font-size: 1.3rem;
