--- a/styles.scss
+++ b/styles.scss
@@ -672,6 +672,7 @@ h2 {
   margin: auto;
   background-color: white;
   padding: 2rem;
+  text-align: justify;
 
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   @media screen and (min-width: 600px) {
