--- a/styles.css
+++ b/styles.css
@@ -637,6 +637,9 @@ h2 {
   text-align: justify;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
+.specs .specs-to-left {
+  text-align: left;
+}
 @media screen and (min-width: 600px) {
   .specs {
     width: 60vw;
