--- a/styles.scss
+++ b/styles.scss
@@ -673,6 +673,9 @@ h2 {
   background-color: white;
   padding: 2rem;
   text-align: justify;
+  .specs-to-left{
+    text-align: left;
+  }
 
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   @media screen and (min-width: 600px) {
